fix(core:card): alignment in grid layout Fixes #6457

--- a/packages/core/src/card/card.element.scss
+++ b/packages/core/src/card/card.element.scss
@@ -1,8 +1,6 @@
 @import './../styles/tokens/generated/index';
 
 :host {
-  --width: fit-content;
-  --height: auto;
   --padding: var(--cds-global-space-6) var(--cds-global-space-8);
 
   --background: #{$cds-alias-object-container-background};
@@ -11,10 +9,4 @@
   --box-shadow: #{$cds-alias-object-shadow-100};
 
   --card-remove-margin: var(--cds-global-space-8);
-}
-
-@supports (-moz-appearance: none) {
-  :host {
-    --width: -moz-fit-content;
-  }
 }
